# demand-planning-diagnostics

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  SPEC.md  implementation-notes.md  pyproject.toml
data/: accuracy.json  fva.json  history.json  segments.json  skus.json
docs/: 00-executive-summary.md  01-architecture.md  02-demand-segmentation.md  03-kpi-reference.md  04-data-dictionary.md  05-methodology-and-limitations.md  06-roadmap.md  index.md
src/demand_planning_diagnostics/: __init__.py  __main__.py  accuracy.py  cli.py  dashboard.py  datagen.py  fva.py  kpi.py  models.py  segment.py
src/demand_planning_diagnostics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: _bootstrap.py  fixtures.py  test_accuracy.py  test_dashboard.py  test_datagen.py  test_fva.py  test_integration.py  test_kpi.py  test_segment.py
